fix wrapping in es

--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -139,7 +139,7 @@
 
 .header__sections-nav ul {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   list-style: none;
   padding: 0;
   margin: 0 10px;
